samples/_failures_safe/1761244390_45a968_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_014d3877.c:149:8: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  149 | struct ParserNode *create_parser_node
      |        ^~~~~~~~~~
